<resources>
    <string name="app_name">AReading</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="discovery">发现</string>
    <string name="store">书城</string>
    <string name="novel">书架</string>
    <string name="booname">书名</string>
    <string name="searchbook">搜索书籍</string>
    <string name="addnovel">加入书架</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="hotauthor">热门作者</string>
    <string name="register">注册</string>
    <string name="skipLogin">跳过登陆</string>
    <string name="phonenumber">电话号码</string>
    <string name="nick">昵称</string>
    <string name="sex">性别</string>
    <string name="cancle">取消</string>
    <string name="comfirm">确认</string>
    <string name="importbook">导入本地书籍</string>
    <string name="loginout">退出登陆</string>
    <string name="startSearch">开始搜索</string>
    <string name="catalog">目录</string>
    <string name="textfont">字体</string>
    <string name="pager">纸张</string>
    <string name="download">下载</string>
    <string name="next">下一章</string>
    <string name="last">上一章</string>
    <string name="autologin">自动登陆</string>
    <string name="bag">背景</string>
    <string name="bookmark">书签</string>
    <string name="bookdetail">书籍详情</string>
    <string name="readHistory">阅读历史</string>
    <string name="searchBook">搜索书籍</string>
</resources>
