<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qrtx.areading.ui.activity.LoginActivity">


    <EditText
        android:id="@+id/id_et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account" />

    <EditText
        android:id="@+id/id_et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/id_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/login" />

    <Button
        android:id="@+id/id_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <Button
        android:id="@+id/id_btn_skip_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skipLogin" />

</LinearLayout>
