<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qrtx.areading.ui.activity.RegisterActivity">


    <EditText
        android:id="@+id/id_et_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick"
        android:maxLines="1" />

    <EditText
        android:id="@+id/id_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/id_et_register_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <ToggleButton
            android:id="@+id/id_tbtn_register"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/selector_btn_eye"
            android:textOff="@null"
            android:textOn="@null" />
    </LinearLayout>


    <RadioGroup
        android:id="@+id/id_sex_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/id_rbtn_boy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="男" />

        <RadioButton
            android:id="@+id/id_rbtn_girl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="女" />
    </RadioGroup>

    <Button
        android:id="@+id/id_btn_confirm"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/comfirm" />

    <Button
        android:id="@+id/id_btn_cancle"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancle" />
</LinearLayout>
