<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_drawerlayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/id_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <RadioGroup
            android:id="@+id/id_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/id_rb_novel"
                style="@style/NavigationRadioButtonStyle"
                android:drawableTop="@drawable/selector_navigation_bar_novel"
                android:text="@string/novel" />

            <RadioButton
                android:id="@+id/id_rb_store"
                style="@style/NavigationRadioButtonStyle"
                android:drawableTop="@drawable/selector_navigation_bar_store"
                android:text="@string/store" />

            <RadioButton
                android:id="@+id/id_rb_discovery"
                style="@style/NavigationRadioButtonStyle"
                android:drawableTop="@drawable/selector_navigation_bar_discovery"
                android:text="@string/discovery" />
        </RadioGroup>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/id_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>

