<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_drawerlayout_read"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--tools:openDrawer="start"-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/flReadWidget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:focusable="false"
            android:layerType="hardware"
            tools:context="com.qrtx.areading.ui.activity.ReadActivity"></FrameLayout>

        <RelativeLayout
            android:id="@+id/id_read_setting_ceil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#c000"
            android:clickable="true"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/id_ibtn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:padding="10dp"
                android:src="@drawable/ic_back" />

            <ImageButton
                android:id="@+id/id_btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/book_share" />

            <ImageButton
                android:id="@+id/id_btn_mark_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/id_btn_more"
                android:background="@drawable/selector_book_mark_btn" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/id_read_setting_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#c000"
            android:clickable="true"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id_tv_last_chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/last"
                    android:textColor="@color/read_theme_white"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/seekbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:maxHeight="3dp"
                    android:minHeight="3dp"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:thumb="@drawable/seekbar_thumb" />

                <!--<View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />-->

                <TextView
                    android:id="@+id/id_tv_next_chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/next"
                    android:textColor="@color/read_theme_white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#2fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/id_tv_catalog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/mulu"
                    android:gravity="center"
                    android:text="@string/catalog"
                    android:textColor="@color/read_theme_white" />

                <TextView
                    android:id="@+id/id_tv_textfont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/shezhi"
                    android:gravity="center"
                    android:text="@string/textfont"
                    android:textColor="@color/read_theme_white" />

                <TextView
                    android:id="@+id/id_tv_pagertheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/pagemode"
                    android:gravity="center"
                    android:text="@string/bag"
                    android:textColor="@color/read_theme_white" />

                <TextView
                    android:id="@+id/id_tv_bookmark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/shuqian"
                    android:gravity="center"
                    android:text="@string/bookmark"
                    android:textColor="@color/read_theme_white" />
            </LinearLayout>
        </LinearLayout>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/id_chapter_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/brown_background"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="章节列表"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp" />

        <ListView
            android:id="@+id/id_lv_chapterlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>